# PhotoCull

./: .gitignore  API_CONTRACTS.md  ARCHITECTURE.md  LESSONS.md  MONITORING.md  QA_FAILURE_MODES.md  README.md  SECURITY_REVIEW.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: ai_processor.rs  export.rs  filesystem.rs  image_processor.rs  mod.rs  raw_decoder.rs  thumbnail.rs  xmp.rs
src/components/: EditPanel.tsx  ExportDialog.tsx  FilmStrip.tsx  MainPreview.tsx  RatingBar.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: api.ts
src/store/: index.ts
